@@ -13,7 +13,8 @@
   added mom-server rpp socket diagnostics
   added support for multi-homed hosts w/SERVERHOST parameter in torque.cfg
   added support for static linking w/PBSBINDIR
-  added availmem/totmem support to Darwin systems
+  added availmem/totmem support to Darwin systems (MAINE)
+  added netload support to Darwin systems (MAINE)
  
 1.2.0p3
 
